--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand" href="#page-top">Travis Cook</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -75,7 +75,7 @@
                     <div class="intro-text">
                         <span class="name">Travis Cook</span>
                         <hr class="star-light">
-                        <span class="skills">Programming // UX &amp; Design // Full Stack Development</span>
+                        <span class="skills">UX &amp; Design // Full Stack Development</span>
                     </div>
                 </div>
             </div>
