--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Travis Cook - Programming &amp UX</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
 
     <!-- Theme CSS -->
     <link href="css/freelancer.css" rel="stylesheet">
@@ -52,6 +52,9 @@
                     </li>
                     <li class="page-scroll">
                         <a href="#portfolio">Portfolio</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#resume">Resume</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#about">About</a>
@@ -155,9 +158,27 @@
             </div>
         </div>
     </section>
-
+    <!-- resume section -->
+    <section class="success" id="resume">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Resume</h2>
+                    <hr class="star-light">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-lg-offset-2">
+                    <p>Here be my resume</p>
+                </div>
+                <div class="col-lg-4">
+                    <p>fasdfa</p>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- About Section -->
-    <section class="success" id="about">
+    <section id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -177,7 +198,7 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact">
+    <section class="success" id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
