--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="">
+                    <img class="img-responsive" src="img/pic.png" alt="">
                     <div class="intro-text">
                         <span class="name">Travis Cook</span>
                         <hr class="star-light">
@@ -97,11 +97,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p>Hi my name Travis</p>
-                </div>
-                <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+                <div class="col-lg-12 text-center">
+                    <p>Hello, I'm Travis! I am currently pursuing a degree in Computer Science at Abilene Christian University. I have a passion for improving people's lives by designing beautiful and thoughtful software, websites, mobile apps, and more.</p>
                 </div>
             </div>
         </div>
@@ -196,7 +193,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/cabin.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/plantSite2.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -206,7 +203,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/cake.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/colorSite.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -315,7 +312,7 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
-                            <br>Abilene, Texas</p>
+                            <p>Abilene, Texas<br>&<br>Spokane, Washington</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Around the Web</h3>
@@ -324,7 +321,7 @@
                                 <a href="https://facebook.com/travis.cook1" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
+                                <a href="https://github.com/travesto" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
                             </li>
                             <li>
                                 <a href="https://twitter.com/travesto" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
@@ -332,10 +329,11 @@
                             <li>
                                 <a href="https://www.linkedin.com/in/travis-cook-3b7567121/" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
                             </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
-                            </li>
                         </ul>
+                    </div>
+                    <div class="footer-col col-md-4">
+                        <h3>Contact</h3>
+                            <p><a href="mailto:travis.cook@comcast.net">travis.cook@comcast.net</a></p>
                     </div>
                 </div>
             </div>
@@ -371,21 +369,18 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Badger & Heart Website Design</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p><em>Project Requirements - </em> The project is to provide a design of a human-computer interface. This interface must be for a computer program, web application, mobile application, or physical device related to the computing/IT industry.</p>
+                            <p><em>Notes - </em> This was a final project for my introductory Human Computer Interaction class. As a group, we designed a mock website and devised a set of goals following the GOMS method to test our design. The full mock-up can be seen at the link below.</p>
+                            <img src="img/portfolio/plantLong.png" class="img-responsive img-centered" alt="">
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                <li>Link:
+                                    <strong><a href="https://xd.adobe.com/view/5fd81401-f4b1-4e7f-9d56-7b2215efae23/">Badger & Heart</a>
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                    <strong>November 2016</a>
                                     </strong>
                                 </li>
                             </ul>
@@ -408,21 +403,25 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Coloring Website</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                           <p><em>Project Requirements - </em> Your coloring website mock-up must: 
+                           <ul class="instructions">
+                               <li>Be a desktop web app</li>
+                               <li>Be simple enough for children to use</li>
+                               <li>Be friendly and pleasant enough that children will want to use it</li>
+                               <li>Have at least two activities (this includes traditional coloring)</li>
+                           </ul>
+                           </p>
+                            <p><em>Notes - </em> This rapid mock-up presented a new aspect for me: designing for children. When planning my mock-up, I was interesting to try and envision how a child would respond to the my design; this thought process led to the use of simple language, buttons with mostly pictures, and a strict avoidance of feature creep. The full mock-up can be seen at the link below.</p>
+                            <img src="img/portfolio/colorLong.png" class="img-responsive img-centered" alt="">
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                <li>Link:
+                                    <strong><a href="https://xd.adobe.com/view/48cf874a-85f4-4598-944e-7408d9e007d2/">Colour Me Surprised</a>
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                    <strong>January 2017</a>
                                     </strong>
                                 </li>
                             </ul>
