Even more content

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Hello, I'm Travis! I am currently pursuing a degree in Computer Science at Abilene Christian University. I have a passion for improving people's lives by designing beautiful and thoughtful software, websites, mobile apps, and more.</p>
+                    <p>Travis Cook is a student at Abilene Christian University currently pursuing a Bachelor's of Science in Computer Science. He is focusing on developing thoughtfully and beautifully designed software product design. Travis primarily uses Adobe Experience Design, Photoshop, and Illustrator for design work. Travis often codes in C++, C#, and other languages for programming work.</p>
                 </div>
             </div>
         </div>
@@ -155,7 +155,8 @@
                     <p>
                         <b>Human Computer Interaction</b>
                         <ul>
-                            <li>Developed and test usability for website design</li>
+                            <li>Developed and tested usability for a client's website design</li>
+                            <li>Created a series of rapid mock-ups based on client needs</li>
                         </ul>
                     </p>
                     <p>
