--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
     <title>Travis Cook - Programming &amp UX</title>
     
-    <link href="mail/contact_me.php">
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
 
@@ -264,7 +263,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
                     <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-                    <form name="sentMessage" id="contactForm" novalidate>
+                    <form action="http://formspree.io/travis.cook@comcast.net" method="post">
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Name</label>
@@ -297,7 +296,7 @@
                         <div id="success"></div>
                         <div class="row">
                             <div class="form-group col-xs-12">
-                                <button type="submit" class="btn btn-success btn-lg">Send</button>
+                                <button type="submit" value="Send" class="btn btn-success btn-lg">Send</button>
                             </div>
                         </div>
                     </form>
