--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                         <div id="success"></div>
                         <div class="row">
                             <div class="form-group col-xs-12">
-                                <button type="submit" value="Send" class="btn btn-success btn-lg">Send</button>
+                                <button name="submit" type="submit" value="Send" class="btn btn-success btn-lg">Send</button>
                             </div>
                         </div>
                     </form>
