--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/music.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/circus.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -324,7 +324,7 @@
                                 <a href="https://github.com/travesto" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
                             </li>
                             <li>
-                                <a href="https://twitter.com/thetraviscook" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
+                                <a href="https://twitter.com/travesto" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
                             </li>
                             <li>
                                 <a href="https://www.linkedin.com/in/travis-cook-3b7567121/" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
@@ -444,24 +444,21 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Music App</h2>
+                            <h2>Project Title</h2>
                             <hr class="star-primary">
-                            <p><em>Project Requirements - </em> Your music app mock-up must: 
-                            <ul class="instructions">
-                                <li>Be a desktop application</li>
-                                <li>Allow users to sort, search, and organize their music</li>
-                                <li>Allow users to play music easily and make easy use of playback related controls</li>
-                            </ul>
-                            </p>
-                            <p><em>Notes - </em> A big challenge for this design was the creation of icons for the individual section of the music app. While some symbols are easily identifiable, others such as the 'genre' icon required additional testing and editing before a recognizable icon emerged. The full mock-up can be seen at the link below.</p>
-                            <img src="img/portfolio/musicLong.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/circus.png" class="img-responsive img-centered" alt="">
+                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
-                                <li>Link:
-                                    <strong><a href="">Music App</a>
+                                <li>Client:
+                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong>February 2017</a>
+                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    </strong>
+                                </li>
+                                <li>Service:
+                                    <strong><a href="http://startbootstrap.com">Web Development</a>
                                     </strong>
                                 </li>
                             </ul>
