--- a/index.html
+++ b/index.html
@@ -263,12 +263,48 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
                     <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-                   <form action="https://formspree.io/your@email.com"
-                        method="POST">
+                    <form action="https://formspree.io/your@email.com" method="POST">
                         <input type="text" name="name">
                         <input type="email" name="_replyto">
                         <input type="submit" value="Send">
                     </form> 
+                   <form action="https://formspree.io/travis.cook@comcast.net" method="POST" name="sentMessage" id="contactForm" novalidate>
+                         <div class="row control-group">
+                             <div class="form-group col-xs-12 floating-label-form-group controls">
+                                 <label>Name</label>
+                                 <input name="name" type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
+                                 <p class="help-block text-danger"></p>
+                             </div>
+                         </div>
+                         <div class="row control-group">
+                             <div class="form-group col-xs-12 floating-label-form-group controls">
+                                 <label>Email Address</label>
+                                 <input name="_replyto" type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
+                                 <p class="help-block text-danger"></p>
+                             </div>
+                         </div>
+                         <div class="row control-group">
+                             <div class="form-group col-xs-12 floating-label-form-group controls">
+                                 <label>Phone Number</label>
+                                 <input name="phone" type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
+                                 <p class="help-block text-danger"></p>
+                             </div>
+                         </div>
+                         <div class="row control-group">
+                             <div class="form-group col-xs-12 floating-label-form-group controls">
+                                 <label>Message</label>
+                                 <textarea name="message" rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                                 <p class="help-block text-danger"></p>
+                             </div>
+                         </div>
+                         <br>
+                         <div id="success"></div>
+                         <div class="row">
+                             <div class="form-group col-xs-12">
+                                 <button type="submit" class="btn btn-success btn-lg">Send</button>
+                             </div>
+                         </div>
+                    </form>
                 </div>
             </div>
         </div>
