--- a/index.html
+++ b/index.html
@@ -329,11 +329,10 @@
                             <li>
                                 <a href="https://www.linkedin.com/in/travis-cook-3b7567121/" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
                             </li>
+                            <li>
+                                <a href="https://instagram.com/travesto" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a>
+                            </li>
                         </ul>
-                    </div>
-                    <div class="footer-col col-md-4">
-                        <h3>Contact</h3>
-                            <p><a href="mailto:travis.cook@comcast.net">travis.cook@comcast.net</a></p>
                     </div>
                 </div>
             </div>
