Re-add pictures

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Travis Cook is a student at Abilene Christian University currently pursuing a Bachelor's of Science in Computer Science. He is focusing on developing thoughtfully and beautifully designed software product design. Travis primarily uses Adobe Experience Design, Photoshop, and Illustrator for design work. Travis often codes in C++, C#, and other languages for programming work.</p>
+                    <p>Travis Cook is a student at Abilene Christian University currently pursuing a Bachelor's of Science in Computer Science. He is expecting to graduate in December 2017. Travis is focusing on developing thoughtfully and beautifully designed software product design. For design work, Travis primarily uses Adobe Experience Design, Photoshop, and Illustrator. Travis often codes in C++, C#, and other languages for programming work.</p>
                 </div>
             </div>
         </div>
@@ -213,7 +213,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/circus.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/music.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -412,7 +412,7 @@
                                <li>Have at least two activities (this includes traditional coloring)</li>
                            </ul>
                            </p>
-                            <p><em>Notes - </em> This rapid mock-up presented a new aspect for me: designing for children. When planning my mock-up, I was interesting to try and envision how a child would respond to the my design; this thought process led to the use of simple language, buttons with mostly pictures, and a strict avoidance of feature creep. The full mock-up can be seen at the link below.</p>
+                            <p><em>Notes - </em> This rapid mock-up presented a new aspect for me: designing for children. When planning my mock-up, I found it interesting to try and envision how a child would respond to the design choices; this thought process led to the use of simple language, buttons with mostly pictures, and a strict avoidance of feature creep. The full mock-up can be seen at the link below.</p>
                             <img src="img/portfolio/colorLong.png" class="img-responsive img-centered" alt="">
                             <ul class="list-inline item-details">
                                 <li>Link:
@@ -443,21 +443,24 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Music App</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/circus.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p><em>Project Requirements - </em> Your music app mock-up must: 
+                            <ul class="instructions">
+                                <li>Be a desktop application</li>
+                                <li>Allow users to sort, search, and organize their music</li>
+                                <li>Allow users to play music easily and make easy use of playback related controls</li>
+                            </ul>
+                            </p>
+                            <p><em>Notes - </em> A big challenge for this design was the creation of icons for the individual section of the music app. While some symbols are easily identifiable, others such as the 'genre' icon required additional testing and editing before a recognizable icon emerged. The full mock-up can be seen at the link below.</p>
+                            <img src="img/portfolio/musicLong.png" class="img-responsive img-centered" alt="">
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                <li>Link:
+                                    <strong><a href="">Music App</a>
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                    <strong>February 2017</a>
                                     </strong>
                                 </li>
                             </ul>
