Added MusicRM Link

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                                 <a href="https://github.com/travesto" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
                             </li>
                             <li>
-                                <a href="https://twitter.com/travesto" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
+                                <a href="https://twitter.com/thetraviscook" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
                             </li>
                             <li>
                                 <a href="https://www.linkedin.com/in/travis-cook-3b7567121/" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
@@ -456,7 +456,7 @@
                             <img src="img/portfolio/musicLong.png" class="img-responsive img-centered" alt="">
                             <ul class="list-inline item-details">
                                 <li>Link:
-                                    <strong><a href="">Music App</a>
+                                    <strong><a href="https://xd.adobe.com/view/8aba72f1-20a6-48af-b351-49b72382ebeb/">Music App</a>
                                     </strong>
                                 </li>
                                 <li>Date:
