--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Travis Cook is a student at Abilene Christian University currently pursuing a Bachelor's of Science in Computer Science. He is expecting to graduate in December 2017. Travis is focusing on developing thoughtfully and beautifully designed software product design. For design work, Travis primarily uses Adobe Experience Design, Photoshop, and Illustrator. Travis often codes in C++, C#, and other languages for programming work.</p>
+                    <p>Travis Cook is a student at Abilene Christian University currently pursuing a Bachelor of Science degree in Computer Science. He is expecting to graduate in December 2017. Travis is focusing on developing thoughtfully and beautifully designed software and web products. For design work, Travis primarily uses Adobe Experience Design, Photoshop, and Illustrator. Travis often codes in C++, C#, and other languages for programming work.</p>
                 </div>
             </div>
         </div>
@@ -173,6 +173,12 @@
                     </p>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-lg-3 col-lg-offset-5">
+                    <hr>
+                    <h4 class="center"><a class="res" href="assests/resume2017.pdf">Download Resumé</a></h4>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -214,36 +220,6 @@
                             </div>
                         </div>
                         <img src="img/portfolio/music.png" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/game.png" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/safe.png" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/submarine.png" class="img-responsive" alt="">
                     </a>
                 </div>
             </div>
@@ -310,11 +286,7 @@
         <div class="footer-above">
             <div class="container">
                 <div class="row">
-                    <div class="footer-col col-md-4">
-                        <h3>Location</h3>
-                            <p>Abilene, Texas<br>&<br>Spokane, Washington</p>
-                    </div>
-                    <div class="footer-col col-md-4">
+                    <div class="footer-col col-md-12">
                         <h3>Around the Web</h3>
                         <ul class="list-inline">
                             <li>
@@ -341,7 +313,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Travis Cook 2017
+                        Hello from Abilene, Texas 🌲 Copyright &copy; Travis Cook 2017
                     </div>
                 </div>
             </div>
