--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <div class="row">
                 <div class="col-lg-3 col-lg-offset-5">
                     <hr>
-                    <h4 class="center"><a class="res" href="assest/resume2017.pdf">Download Resumé</a></h4>
+                    <h4 class="center"><a class="res" href="asset/resume2017.pdf">Download Resumé</a></h4>
                 </div>
             </div>
         </div>
