--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <a href="#about">About</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#resume">Resumé</a>
+                        <a href="#resume">Resume</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#portfolio">Portfolio</a>
@@ -108,7 +108,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Resumé</h2>
+                    <h2>Resume</h2>
                     <hr class="star-light">
                 </div>
             </div>
@@ -143,7 +143,7 @@
                         <b>Student Technician</b>
                         <br><em>ACU Technology Support</br>Jan 2014-Present</em>
                         <ul>
-                            <li>Independantly assist faculty, staff, and students with technology support</br></li>
+                            <li>Independently assist faculty, staff, and students with technology support</br></li>
                             <li>Troubleshoot and repair computers, mobile devices, and other electronics</br></li>
                         </ul>
                     </p>
@@ -176,7 +176,7 @@
             <div class="row">
                 <div class="col-lg-3 col-lg-offset-5">
                     <hr>
-                    <h4 class="center"><a class="res" href="asset/resume2017.pdf">Download Resumé</a></h4>
+                    <h4 class="center"><a class="res" href="asset/resume2017.pdf">Download Resume</a></h4>
                 </div>
             </div>
         </div>
