--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <h3 class="center">Projects</h3>
                     <hr>
                     <p>
-                        <b>Human Computer Interaction</b>
+                        <b>Human-Computer Interaction</b>
                         <ul>
                             <li>Developed and tested usability for a client's website design</li>
                             <li>Created a series of rapid mock-ups based on client needs</li>
@@ -343,7 +343,7 @@
                             <h2>Badger & Heart Website Design</h2>
                             <hr class="star-primary">
                             <p><em>Project Requirements - </em> The project is to provide a design of a human-computer interface. This interface must be for a computer program, web application, mobile application, or physical device related to the computing/IT industry.</p>
-                            <p><em>Notes - </em> This was a final project for my introductory Human Computer Interaction class. As a group, we designed a mock website and devised a set of goals following the GOMS method to test our design. The full mock-up can be seen at the link below.</p>
+                            <p><em>Notes - </em> This was a final project for my introductory Human-Computer Interaction class. As a group, we designed a mock website and devised a set of goals following the GOMS method to test our design. The full mock-up can be seen at the link below.</p>
                             <img src="img/portfolio/plantLong.png" class="img-responsive img-centered" alt="">
                             <ul class="list-inline item-details">
                                 <li>Link:
