--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Badger & Heart Website Design</h2>
+                            <h2>Badger & Heart Website</h2>
                             <hr class="star-primary">
                             <p><em>Project Requirements - </em> The project is to provide a design of a human-computer interface. This interface must be for a computer program, web application, mobile application, or physical device related to the computing/IT industry.</p>
                             <p><em>Notes - </em> This was a final project for my introductory Human-Computer Interaction class. As a group, we designed a mock website and devised a set of goals following the GOMS method to test our design. The full mock-up can be seen at the link below.</p>
@@ -455,21 +455,27 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Pharmacy Mobile App</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/game.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <<p><em>Project Requirements - </em> Your pharmacy app mock-up must: 
+                            <ul class="instructions">
+                                <li>Be a mobile app</li>
+                                <li>Allow the user to refill medication</li>
+                                <li>Alert users when their medication is ready</li>
+                                <li>Allow users to see what drugs they have currently prescribed by their physician</li>
+                                <li>Allow users to see see what drugs have been previously prescribed (and when they took them and for how long).</li>
+                                <li>One other feature you think would be useful (examples: see related drugs, see generic equivalent of brand name drug that user is taking, chat with a pharmacist, find nearest store with a maps feature, etc.)</li>
+                            </ul>
+                            </p>
+                            <p><em>Notes - </em> A big challenge for this design was the creation of icons for the individual section of the music app. While some symbols are easily identifiable, others such as the 'genre' icon required additional testing and editing before a recognizable icon emerged. The full mock-up can be seen at the link below.</p>
+                            <img src="img/portfolio/musicLong.png" class="img-responsive img-centered" alt="">
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                <li>Link:
+                                    <strong><a href="https://xd.adobe.com/view/32943cb7-f308-4743-85f5-f6fe5220c186/">Music App</a>
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                    <strong>February 2017</a>
                                     </strong>
                                 </li>
                             </ul>
