--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Travis Cook - Programming &amp UX</title>
+        <title>Travis Cook - US Design & Research</title>
 
         <!-- Theme CSS -->
         <link href="css/newCSS.css" rel="stylesheet">
@@ -32,7 +32,7 @@
                     <div class="pageTitle"> 
                         <div class="title serif">Travis</div>
                         <div class="spacer"></div>
-                        <div class="title serif">Cook</div>
+                        <div class="title serif">Cook sans e</div>
                     </div>
                     <div class="links">
                         <ul>
