--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                     </div>
                     <div class="links">
                         <ul>
-                            <li><a href="asset/resume2019.pdf">Resume</a></li>
+                            <li><a href="asset/resume2022.pdf">Resume</a></li>
                             <li><a href="./work.html">Recent Works</a></li>
                             <li><a href="https://www.linkedin.com/in/travis-cook-3b7567121/">LinkedIn</a></li>
-                            <li><a href="https://github.com/travesto">GitHub</a></li>
+                            <!-- <li><a href="https://github.com/travesto">GitHub</a></li> -->
                             <li><a href="mailto:travis@travesto.design">Email Me</a></li>
                         </ul>
                     </div>
