--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <link href="css/newCSS.css" rel="stylesheet">
 
         <!-- Custom Fonts -->
-        <link href="https://fonts.googleapis.com/css?family=Lora|Open+Sans+Condensed:300&display=swap" rel="stylesheet"> 
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
@@ -32,7 +34,7 @@
                     <div class="pageTitle"> 
                         <div class="title serif">Travis</div>
                         <div class="spacer"></div>
-                        <div class="title serif">Cook sans e</div>
+                        <div class="title serif">Cook</div>
                     </div>
                     <div class="links">
                         <ul>
