--- a/work.html
+++ b/work.html
@@ -40,7 +40,7 @@
                     </a>
                     <div class="links">
                         <ul>
-                            <li><a href="asset/resume2022.pdf">Resume</a></li>
+                            <li><a href="asset/Resume2022.pdf">Resume</a></li>
                             <li><a href="./work.html">Recent Works</a></li>
                             <li><a href="https://www.linkedin.com/in/travis-cook-3b7567121/">LinkedIn</a></li>
                             <li><a href="mailto:travis@travesto.design">Email Me</a></li>
