--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </div>
                     <div class="links">
                         <ul>
-                            <li><a href="asset/resume2022.pdf">Resume</a></li>
+                            <li><a href="asset/Resume2022.pdf">Resume</a></li>
                             <li><a href="./work.html">Recent Works</a></li>
                             <li><a href="https://www.linkedin.com/in/travis-cook-3b7567121/">LinkedIn</a></li>
                             <!-- <li><a href="https://github.com/travesto">GitHub</a></li> -->
