--- a/index.html
+++ b/index.html
@@ -36,11 +36,21 @@
                         <div class="spacer"></div>
                         <div class="title serif">Cook</div>
                     </div>
+                    <div class="dropdown">
+                        <button class="dropbtn">Menu</button>
+                        <div class="dropdown-content">
+                          <a href="asset/Resume2022.pdf">Resume</a>
+                          <a href="./work.html">Portfolio</a>
+                          <a href="www.linkedin.com/in/travis-cook-uxmc/">LinkedIn</a>
+                          <a href="mailto:travis@travesto.design">Email Me</a>
+                        </div>
+                    </div>  
                     <div class="links">
                         <ul>
+                            <li><a href="./index.html">Home</a></li>
                             <li><a href="asset/Resume2022.pdf">Resume</a></li>
-                            <li><a href="./work.html">Recent Works</a></li>
-                            <li><a href="https://www.linkedin.com/in/travis-cook-3b7567121/">LinkedIn</a></li>
+                            <li><a href="./work.html">Portfolio</a></li>
+                            <li><a href="www.linkedin.com/in/travis-cook-uxmc">LinkedIn</a></li>
                             <!-- <li><a href="https://github.com/travesto">GitHub</a></li> -->
                             <li><a href="mailto:travis@travesto.design">Email Me</a></li>
                         </ul>
@@ -56,11 +66,11 @@
                         <br><br>
                         I'm Travis, currently a Creative Designer for USAA, based in San Antonio, Texas.
                         <br><br>
-                        As a designer, I split my time between coding prototypes (React/Redux, Plain 'ol HTML5, CSS, and JS, mostly) and creating and facilitating Human Centered Design research with my team to create usable, beautiful experiences.
+                        As a designer, I split my time between creating and facilitating Human Centered Design research with my team to create usable, beautiful experiences and coding prototypes (React/Redux, Plain 'ol HTML5, CSS, and JS, mostly). 
                         <br><br>
                         I have a B.S. in Computer Science with emphasis in Human-Computer Interaction from Abilene Christian University. I received my Nielsen-Norman UX certification in June 2019.
                         <br><br>
-                        When I'm not in the office, I'm exploring craft coffee, riding my motorbike (#advlife), or practicing my <a href="https://instagram.com/travesto">photography.</a>
+                        When I'm not in the office, I'm exploring craft coffee, riding my bike, or practicing my <a href="https://instagram.com/travesto">photography.</a>
                         <br><br>
                         
                 </div>
