--- a/work.html
+++ b/work.html
@@ -28,7 +28,7 @@
     </head>
 
     <body class="page sans">
-        <div class="flexContainer">
+        <div class="flexContainer">  
             <div>
                 <div class="list">
                     <a href="./index.html">
@@ -38,11 +38,22 @@
                             <div class="title serif">Cook</div>
                         </div>
                     </a>
+                    <div class="dropdown">
+                        <button class="dropbtn">Menu</button>
+                        <div class="dropdown-content">
+                            <a href="./index.html">Home</a>
+                            <a href="asset/Resume2022.pdf">Resume</a>
+                            <a href="./work.html">Portfolio</a>
+                            <a href="www.linkedin.com/in/travis-cook-uxmc/">LinkedIn</a>
+                            <a href="mailto:travis@travesto.design">Email Me</a>
+                        </div>
+                    </div>  
                     <div class="links">
                         <ul>
+                            <li><a href="./index.html">Home</a></li>
                             <li><a href="asset/Resume2022.pdf">Resume</a></li>
-                            <li><a href="./work.html">Recent Works</a></li>
-                            <li><a href="https://www.linkedin.com/in/travis-cook-3b7567121/">LinkedIn</a></li>
+                            <li><a href="./work.html">Portfolio</a></li>
+                            <li><a href="www.linkedin.com/in/travis-cook-uxmc/">LinkedIn</a></li>
                             <li><a href="mailto:travis@travesto.design">Email Me</a></li>
                         </ul>
                     </div>
@@ -65,22 +76,7 @@
         </div>
         
         <!-- Google Analytics -->
-        <script>
-            (function(i, s, o, g, r, a, m) {
-                i['GoogleAnalyticsObject'] = r;
-                i[r] = i[r] || function() {
-                    (i[r].q = i[r].q || []).push(arguments)
-                }, i[r].l = 1 * new Date();
-                a = s.createElement(o),
-                    m = s.getElementsByTagName(o)[0];
-                a.async = 1;
-                a.src = g;
-                m.parentNode.insertBefore(a, m)
-            })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
-            ga('create', 'UA-92562835-1', 'auto');
-            ga('send', 'pageview');
-        </script>
+        
 
     </body>
 
