added all portfolio stubs

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <br><br>
                         As a designer, I split my time between creating and facilitating Human Centered Design research with my team to create usable, beautiful experiences and coding prototypes (React/Redux, Plain 'ol HTML5, CSS, and JS, mostly). 
                         <br><br>
-                        I have a B.S. in Computer Science with emphasis in Human-Computer Interaction from Abilene Christian University. I received my Nielsen-Norman UX certification in June 2019.
+                        I have a B.S. in Computer Science with emphasis in Human-Computer Interaction from Abilene Christian University. I received my Nielsen-Norman UX Master Certification in October 2020.
                         <br><br>
                         When I'm not in the office, I'm exploring craft coffee, riding my bike, or practicing my <a href="https://instagram.com/travesto">photography.</a>
                         <br><br>
